--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Test Git Lesson</title>
   </head>
   <body>
+    asdfasdfasdf
     <section>
       <h2>Lorem, ipsum dolor.</h2>
       <p>
